# MagicSetEditor2-GenevensiS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
_CPack_Packages/Linux/RPM/: rpmbuildmagicseteditor.err  rpmbuildmagicseteditor.out
_CPack_Packages/Linux/RPM/RPMS/: magicseteditor-2.6.0-x86_64.rpm
_CPack_Packages/Linux/RPM/SPECS/: magicseteditor.spec
src/: config.hpp
src/data/: font.cpp  set.cpp  settings.hpp
src/gui/: about_window.cpp  card_link_window.cpp
src/gui/control/: card_list.cpp
src/gui/set/: cards_panel.cpp  console_panel.cpp  set_info_panel.cpp  stats_panel.cpp
src/gui/symbol/: basic_shape_editor.cpp  control.cpp  point_editor.cpp  select_editor.cpp  symmetry_editor.cpp
src/script/: image.cpp  image.hpp
src/script/functions/: json.cpp  json.hpp
src/util/: rotation.cpp
tools/linux-installer/: install
tools/linux-installer/program/: magicseteditor-updater
